--- a/package.json
+++ b/package.json
@@ -95,6 +95,7 @@
     "react-hot-loader": "^4.6.3",
     "react-modal": "^3.1.11",
     "react-router-dom": "^4.3.1",
+    "react-refetch": "^2.0.3",
     "styled-components": "^3.5.0-0",
     "styled-theme": "^0.3.3",
     "styled-tools": "^1.6.0"
